--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -5,6 +5,24 @@
     <title>Title</title>
 </head>
 <body>
+<form action="#" th:action="@{/}" th:object="${productForm}" method="post">
+    <table>
+        <tr>
+            <td>Name:</td>
+            <td><input type="text" th:field="*{name}" /></td>
+            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+        </tr>
+        <tr>
+            <td>Description:</td>
+            <td><input type="text" th:field="*{description}" /></td>
+            <td th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Description Error</td>
+        </tr>
+        <tr>
+            <td><button type="submit">Submit</button></td>
+        </tr>
+    </table>
+</form>
+
 
 </body>
 </html>
